--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portifólio Web</title>
+  <style>
+    body {
+      background-color: #EFFFEE;
+    }
+
+    .nome,
+    .descricao {
+      font-family: IBM Plex Mono, sans-serif;
+    }
+
+    .residencia {
+      font-size: 20px;
+      color: #3C653A;
+      font-weight: 600;
+    }
+
+    em {
+      color: rgb(67, 138, 83);
+    }
+
+    .html {
+      font-size: 24px;
+    }
+
+    .css {
+      font-size: 22px;
+    }
+
+    .javascript {
+      font-size: 20px;
+    }
+
+    .git {
+      font-size: 18px;
+    }
+
+    .ux {
+      font-size: 16px;
+    }
+
+    .ui {
+      font-size: 14px;
+    }
+  </style>
 </head>
 
 <body>
@@ -17,8 +61,8 @@
   <br>
   <div id="sobre">
     <h1 class="nome">Crislande Aparecida Pereira</h1>
+    <img src="profile.jpeg" alt="Foto aluna da Trybe" id="foto" width="300px">
     <p class="residencia"><strong>Poços de Caldas - MG</strong></p>
-    <img src="image.jpeg" alt="Foto aluna da Trybe" id="foto" width="300px">
     <p class="descricao"> Programadora iniciante em <em> transição de carreira</em>, atualmente <br> acadêmica de <strong> Engenharia da Computação </strong> pela instituição <br>Descomplica e aluna da <Strong> Formação de Desenvolvimento Web </Strong>na Trybe.</p>
     <a href="https://www.linkedin.com/in/crislandepereira/" target="_blank">Linkedin</a>
     <a href="https://github.com/CrislandePereira" target="_blank">GitHub</a>
