Criando arquivo style.css e movendo estilizaçao inline para css externo

--- a/index.html
+++ b/index.html
@@ -5,51 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Portifólio Web</title>
-  <style>
-    body {
-      background-color: #EFFFEE;
-    }
-
-    .nome,
-    .descricao {
-      font-family: IBM Plex Mono, sans-serif;
-    }
-
-    .residencia {
-      font-size: 20px;
-      color: #3C653A;
-      font-weight: 600;
-    }
-
-    em {
-      color: rgb(67, 138, 83);
-    }
-
-    .html {
-      font-size: 24px;
-    }
-
-    .css {
-      font-size: 22px;
-    }
-
-    .javascript {
-      font-size: 20px;
-    }
-
-    .git {
-      font-size: 18px;
-    }
-
-    .ux {
-      font-size: 16px;
-    }
-
-    .ui {
-      font-size: 14px;
-    }
-  </style>
 </head>
 
 <body>
