Fazendo ajustes nos posicionamentos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="conteudo">
     <div id="sobre">
       <div id="perfil">
-        <img src="./img/profile.jpeg" alt="Foto aluna da Trybe" id="foto" width="300px">
+        <img src="./img/profile.jpeg" alt="Foto aluna da Trybe" id="foto">
         <h1 class="nome">Crislande Aparecida Pereira</h1>
         <p class="residencia"><span class="material-icons">location_on</span>
           <strong>Poços de Caldas - MG</strong>
